# borack_library

./: CMakeLists.txt
app/: README  app.cmake  main.cpp
